--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css"></link>
-    <title>Basic Tetris</title>
+    <link rel="icon" type="image/x-icon" href="./Images/pumpkin.png">
+    <title>Tetris</title>
   </head>
   <body>
     <div class="container" id="frame">
@@ -39,16 +40,52 @@
             <input type="checkbox" checked="checked" id="gravity-check">
             <span class="checkmark"></span>
             </label>
-            <label class="mode">4 squares
-            <input type="checkbox" checked="checked" id="four-check">
+            <label class="mode">Ground
+            <input type="checkbox" checked="checked" id="ground-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Clearance
+            <input type="checkbox" checked="checked" id="clearance-check">
             <span class="checkmark"></span>
             </label>
             <label class="mode">Homeostasis
             <input type="checkbox" checked="checked" id="homeo-check">
             <span class="checkmark"></span>
             </label>
-            <label class="mode">Clearance
-            <input type="checkbox" checked="checked" id="clearance-check">
+            <label class="mode">Interaction
+            <input type="checkbox" checked="checked" id="interaction-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Tetrominoes
+            <input type="checkbox" checked="checked" id="four-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Simplex
+            <input type="checkbox" id="mono-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Roblox
+            <input type="checkbox" id="roblox-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Hard
+            <input type="checkbox" id="hard-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Lava
+            <input type="checkbox" id="lava-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">AutoClear
+            <input type="checkbox" id="autoclear-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Opposite
+            <input type="checkbox" id="opposite-check">
+            <span class="checkmark"></span>
+            </label>
+            <label class="mode">Productive
+            <input type="checkbox" id="productive-check">
             <span class="checkmark"></span>
             </label>
         </div>
