--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <script src="app.js" charset="utf-8"></script>
     <link rel="stylesheet" href="style.css"></link>
     <link rel="icon" type="image/x-icon" href="./Images/pumpkin.png">
