--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
         </div>
         <div class="directional-buttons">
             <button class="direction-button up" role="button" id="up-button">
-                <span class="visually-hidden">up</span>
+                <span class="visually-hidden"></span>
             </button>
             <button class="direction-button left" role="button" id="left-button">
-                <span class="visually-hidden">left</span>
+                <span class="visually-hidden"></span>
             </button>
             <button class="direction-button right" role="button" id="right-button">
-                <span class="visually-hidden">right</span>
+                <span class="visually-hidden"></span>
             </button>
             <button class="direction-button down" role="button" id="down-button">
-                <span class="visually-hidden">down</span>
+                <span class="visually-hidden"></span>
             </button>
         </div>
     </div>
